Bootstrap 4 added; Mat-spinner replaced my mbd spinner

--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -197,6 +197,6 @@
 </div>
 <ng-template #elseBlock>
   <div style="display: flex; justify-content: center;">
-    <mat-spinner [diameter]="30"></mat-spinner>
+    <mdb-spinner spinnerColor="blue"></mdb-spinner>
   </div> 
 </ng-template>
