--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -142,7 +142,8 @@
   </div>
   <ng-template #elseBlock>
     <div style="display: flex; justify-content: center;">
-      <mat-spinner [diameter]="30"></mat-spinner>
+      <!-- <mat-spinner [diameter]="30"></mat-spinner> -->
+      <mdb-spinner spinnerColor="blue"></mdb-spinner>
     </div> 
   </ng-template>
 </section>
