--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,13 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet"> -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
-  <app-main-nav>
+  <!-- <app-main-nav> -->
     <body>
       <app-status-bar></app-status-bar>
+      <app-sidenav></app-sidenav>
       <router-outlet></router-outlet>
       <app-scroll-top></app-scroll-top>
     </body>
-    <app-footer></app-footer>      
-  </app-main-nav>
+    <app-footer></app-footer>
+  <!-- </app-main-nav> -->
 </html>
