--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -25,13 +25,13 @@
       </ul>
     </li> -->
   </div>
-  <table multiTemplateDataRows mat-table matSort (matSortChange)="sortData($event)" [dataSource]="dataSource" class="mat-elevation-z8">
+  <table multiTemplateDataRows mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- <ng-container matColumnDef="index">
       <th mat-header-cell *matHeaderCellDef> Index </th>
       <td mat-cell *matCellDef="let validator"> {{0}} </td>
     </ng-container> -->
     <ng-container  matColumnDef="moniker">
-      <th mat-sort-header="name" mat-header-cell *matHeaderCellDef> Name </th>
+      <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
         <span>
           <figure class="validator-avatar is-128x128" *ngIf="validator.keybase">
@@ -65,7 +65,7 @@
     </ng-container>
   
     <ng-container matColumnDef="weight">
-      <th mat-sort-header="weight" mat-header-cell *matHeaderCellDef> Voting Weight </th>
+      <th mat-sort-header="tokens" mat-header-cell *matHeaderCellDef> Voting Weight </th>
       <td mat-cell *matCellDef="let validator">
         {{validator.tokens/1e6 | number:'.0-0'}}
         <!-- <br>
@@ -76,7 +76,7 @@
     
 
     <ng-container matColumnDef="assets">
-      <th mat-header-cell *matHeaderCellDef> Assets </th>
+      <th mat-sort-header="account.tokens" mat-header-cell *matHeaderCellDef> Assets </th>
       <td mat-cell *matCellDef="let validator">
         <span *ngIf="validator.account?.tokens; else accountElseBlock" matTooltip="Balance" matTooltipPosition="above">
           {{validator.account?.tokens/1e6 | number:'.2-2'}}
@@ -129,7 +129,7 @@
     </ng-container>
    -->
     <ng-container matColumnDef="bond">
-      <th mat-header-cell *matHeaderCellDef> Self-Bond </th>
+      <th mat-sort-header="self_bond" mat-header-cell *matHeaderCellDef> Self-Bond </th>
       <td mat-cell *matCellDef="let validator">
         {{validator.self_bond/1e6 | number:'.0-0'}} <span class="ticker">ATOM</span>
         <!-- <br> -->
