--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -1,5 +1,5 @@
 .status-bar {
-    margin-top: 80px;
+    // margin-top: 80px;
     margin-bottom: 10px;
 }
 
@@ -7,8 +7,8 @@
     font-size: 150%;
 }
 
-@media screen and (max-width: 768px) {
-    .row {
-        max-width: 95%; /*1140px or in %*/
-    }
-}
+// @media screen and (max-width: 768px) {
+//     .row {
+//         max-width: 95%; /*1140px or in %*/
+//     }
+// }
