--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -141,7 +141,7 @@
       <mdb-navbar-brand>
         <!-- Breadcrumb-->
         <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-          <h1>Coris</h1>
+          <p class="brand-nav">Coris</p>
         </div>
         <!--/. Breadcrumb-->
       </mdb-navbar-brand>
