--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,14 +39,14 @@ html, body {
   margin: 0;
 }
 
-.clearfix {zoom: 1;}
-.clearfix:after {
-    content: '.';
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
+// .clearfix {zoom: 1;}
+// .clearfix:after {
+//     content: '.';
+//     clear: both;
+//     display: block;
+//     height: 0;
+//     visibility: hidden;
+// }
 
 /*-------------------------------------------------*/
 /* Reusable Components */
