--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <!-- <app-main-nav> -->
-    <body>
+    <app-sidenav></app-sidenav>
+    <!-- <body>
       <app-status-bar></app-status-bar>
-      <app-sidenav></app-sidenav>
       <router-outlet></router-outlet>
       <app-scroll-top></app-scroll-top>
-    </body>
-    <app-footer></app-footer>
+    </body> -->
+    <!-- <app-footer></app-footer> -->
   <!-- </app-main-nav> -->
 </html>
