--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -1,7 +1,6 @@
-<body class="mdb-skin">
+<body class="cyan-skin">
     <!--Double navigation-->
   <header>
-  
       <!-- Sidebar navigation -->
       <mdb-side-nav #sidenav class="sn-bg-1" [fixed]="false">
     
@@ -77,8 +76,8 @@
     
                 <!-- Simple link -->
                 <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect>
-                    <i class="far fa-hand-pointer"></i> Validator
+                  <mdb-accordion-item-head mdbWavesEffect routerLink="/validators">
+                    <i class="fas fa-users"></i> Validator
                   </mdb-accordion-item-head>
                   <mdb-accordion-item-body></mdb-accordion-item-body>
                 </mdb-accordion-item>
@@ -102,18 +101,25 @@
     
                 <!-- Simple link -->
                 <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect>
-                    <i class="far fa-gem"></i> Block
+                  <mdb-accordion-item-head mdbWavesEffect routerLink="/blocks">
+                    <i class="fa fa-cubes"></i> Block
                   </mdb-accordion-item-head>
                   <mdb-accordion-item-body></mdb-accordion-item-body>
                 </mdb-accordion-item>
                 
                 <mdb-accordion-item class="no-collase">
-                    <mdb-accordion-item-head mdbWavesEffect>
-                      <i class="far fa-gem"></i> Transaction
+                    <mdb-accordion-item-head mdbWavesEffect routerLink="/txs">
+                      <i class="fa fa-tasks"></i> Transaction
                     </mdb-accordion-item-head>
                     <mdb-accordion-item-body></mdb-accordion-item-body>
-                  </mdb-accordion-item>
+                </mdb-accordion-item>
+
+                <mdb-accordion-item class="no-collase">
+                  <mdb-accordion-item-head mdbWavesEffect routerLink="/gov">
+                    <i class="fa fa-university"></i> Governance
+                  </mdb-accordion-item-head>
+                  <mdb-accordion-item-body></mdb-accordion-item-body>
+              </mdb-accordion-item>
   
               </mdb-accordion>
             </ul>
@@ -141,7 +147,7 @@
         <mdb-navbar-brand>
           <!-- Breadcrumb-->
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-            <h1>Coris</h1>
+            <h1 class="brand-nav">Coris</h1>
           </div>
           <!--/. Breadcrumb-->
         </mdb-navbar-brand>
@@ -149,26 +155,35 @@
         <navlinks>
           <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>
-                <i class="fas fa-envelope"></i>
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active-list-item">
+                <i class="fa fa-users"></i>
                 <span class="clearfix d-none d-sm-inline-block">Validator</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>
-                <i class="far fa-comments"></i>
-                <span class="clearfix d-none d-sm-inline-block">Block</span>
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/blocks" routerLinkActive="active-list-item">
+                <i class="fa fa-cubes"></i>
+                <span class="clearfix d-none d-sm-inline-block">Blocks</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link waves-light" mdbWavesEffect>
-                <i class="fas fa-user"></i>
-                <span class="clearfix d-none d-sm-inline-block">Transaction</span>
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/txs" routerLinkActive="active-list-item">
+                <i class="fa fa-tasks"></i>
+                <span class="clearfix d-none d-sm-inline-block">Transactions</span>
               </a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link waves-light" mdbWavesEffect routerLink="/gov" routerLinkActive="active-list-item">
+                <i class="fa fa-university"></i>
+                <span class="clearfix d-none d-sm-inline-block">Governance</span>
+              </a>
+            </li>
+
             <li class="nav-item dropdown btn-group" dropdown>
               <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                Network
+                <i class="fa fa-globe"></i>
+                <span class="clearfix d-none d-sm-inline-block">Network</span>
               </a>
               <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
                 <a class="dropdown-item" href="#">MainNet</a>
@@ -180,12 +195,15 @@
         </navlinks>
       </mdb-navbar>
       <!--/. Navbar -->
-    
     </header>
     <!--/.Double navigation-->
-    
     <!--Main Layout-->
     <main>
-    
+        <body>
+            <app-status-bar></app-status-bar>
+            <router-outlet></router-outlet>
+            <app-scroll-top></app-scroll-top>
+            <app-footer></app-footer>
+        </body>
     </main>
     <!--/Main layout-->
