--- a/src/app/components/navigation/sidenav/sidenav.component.scss
+++ b/src/app/components/navigation/sidenav/sidenav.component.scss
@@ -4,3 +4,12 @@
     float: left;
     margin-top: 10px;
   }
+
+  .brand-nav {
+    vertical-align: middle;
+    margin-bottom: 0;
+  }
+
+  .active-list-item {
+    color:#FFC107;
+  }
