--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -26,10 +26,12 @@
     </li> -->
   </div>
   <table multiTemplateDataRows mat-table matSort [dataSource]="dataSource" class="mat-elevation-z8">
-    <!-- <ng-container matColumnDef="index">
-      <th mat-header-cell *matHeaderCellDef> Index </th>
-      <td mat-cell *matCellDef="let validator"> {{0}} </td>
-    </ng-container> -->
+    
+    <ng-container matColumnDef="rank">
+      <th mat-sort-header="rank" mat-header-cell *matHeaderCellDef> Rank </th>
+      <td mat-cell *matCellDef="let validator"> {{validator.rank}} </td>
+    </ng-container>
+
     <ng-container  matColumnDef="moniker">
       <th mat-sort-header="description.moniker" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
