revamped footer. color scheme & layout tweaks.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
   <div class="row">
     <div class="col span-1-of-2">
       <ul class="footer-nav">
@@ -21,4 +21,50 @@
       Copyright &copy; 2019 - <a class="footer-brand" href="http://cyphercore.io" target=" ">Cypher Core LLC.</a>
     </p>
   </div>
-</footer>
+</footer> -->
+
+<!-- Footer -->
+<footer class="page-footer font-small pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+        <ul class="list-unstyled list-inline text-center">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-fb mx-1" mdbWavesEffect href="https://github.com/jim380/Coris" target=" ">
+                <mdb-icon fab icon="github"></mdb-icon>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-tw mx-1" mdbWavesEffect href="https://twitter.com/cypher_core" target=" ">
+                <mdb-icon fab icon="twitter"></mdb-icon>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-gplus mx-1" mdbWavesEffect href="https://t.me/cyphercore" target=" ">
+                <mdb-icon fab fab icon="telegram"></mdb-icon>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-li mx-1" mdbWavesEffect href="https://www.linkedin.com/company/cypher-core/about/?viewAsMember=true" target=" ">
+                <mdb-icon fab icon="linkedin"></mdb-icon>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-dribbble mx-1" mdbWavesEffect href="http://cyphercore.io" target=" ">
+                <mdb-icon fab icon="dribbble"></mdb-icon>
+              </a>
+            </li>
+          </ul>
+
+    </div>
+    <!-- Footer Elements -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="http://cyphercore.io"> Cypher Core LLC.</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
