--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -1,191 +1,3 @@
-<body class="mdb-skin">
-  <!--Double navigation-->
-<header>
-
-    <!-- Sidebar navigation -->
-    <mdb-side-nav #sidenav class="sn-bg-1" [fixed]="false">
-  
-      <mdb-navbar-brand>
-        <li>
-          <div class="logo-wrapper waves-light">
-            <a href="#">
-              <!-- <img src="https://mdbootstrap.com/img/logo/mdb-transparent.png" class="img-fluid flex-center"> -->
-              <img src="../../../../assets/img/Coris_logo.png" class="img-fluid flex-center logo">
-            </a>
-          </div>
-        </li>
-        <!--/. Logo -->
-      </mdb-navbar-brand>
-  
-      <links>
-        <!--Social-->
-        <li>
-          <ul class="social">
-            <li>
-              <a class="icons-sm fb-ic">
-                <i class="fab fa-github"> </i>
-              </a>
-            </li>
-            <li>
-              <a class="icons-sm pin-ic">
-                <i class="fab fa-twitter"> </i>
-              </a>
-            </li>
-            <li>
-              <a class="icons-sm gplus-ic">
-                <i class="fab fa-telegram"> </i>
-              </a>
-            </li>
-            <li>
-              <a class="icons-sm tw-ic">
-                <i class="fab fa-linkedin"> </i>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <!--/Social-->
-        <!--Search Form-->
-        <li>
-          <form class="search-form" role="search">
-            <div class="form-group md-form mt-0 pt-1 waves-light" mdbWavesEffect>
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-          </form>
-        </li>
-        <!--/.Search Form-->
-        <!-- Side navigation links -->
-        <li>
-          <ul class="collapsible collapsible-accordion">
-            <mdb-accordion [multiple]="false" aria-multiselectable="false">
-  
-              <!-- Collapsible link -->
-              <!-- <mdb-accordion-item>
-                <mdb-accordion-item-head mdbWavesEffect>
-                  <i class="fas fa-chevron-right"></i> Menu 1
-                </mdb-accordion-item-head>
-                <mdb-accordion-item-body>
-                  <ul>
-                    <li>
-                      <a href="#" mdbWavesEffect>Link 1</a>
-                    </li>
-                    <li>
-                      <a href="#" mdbWavesEffect>Link 2</a>
-                    </li>
-                  </ul>
-                </mdb-accordion-item-body>
-              </mdb-accordion-item> -->
-  
-              <!-- Simple link -->
-              <mdb-accordion-item class="no-collase">
-                <mdb-accordion-item-head mdbWavesEffect>
-                  <i class="far fa-hand-pointer"></i> Validator
-                </mdb-accordion-item-head>
-                <mdb-accordion-item-body></mdb-accordion-item-body>
-              </mdb-accordion-item>
-  
-              <!-- Collapsible link -->
-              <!-- <mdb-accordion-item>
-                <mdb-accordion-item-head mdbWavesEffect>
-                  <i class="far fa-eye"></i> Collapsible menu 2
-                </mdb-accordion-item-head>
-                <mdb-accordion-item-body>
-                  <ul>
-                    <li>
-                      <a href="#" mdbWavesEffect>Link 1</a>
-                    </li>
-                    <li>
-                      <a href="#" mdbWavesEffect>Link 2</a>
-                    </li>
-                  </ul>
-                </mdb-accordion-item-body>
-              </mdb-accordion-item> -->
-  
-              <!-- Simple link -->
-              <mdb-accordion-item class="no-collase">
-                <mdb-accordion-item-head mdbWavesEffect>
-                  <i class="far fa-gem"></i> Block
-                </mdb-accordion-item-head>
-                <mdb-accordion-item-body></mdb-accordion-item-body>
-              </mdb-accordion-item>
-              
-              <mdb-accordion-item class="no-collase">
-                  <mdb-accordion-item-head mdbWavesEffect>
-                    <i class="far fa-gem"></i> Transaction
-                  </mdb-accordion-item-head>
-                  <mdb-accordion-item-body></mdb-accordion-item-body>
-                </mdb-accordion-item>
-
-            </mdb-accordion>
-          </ul>
-        </li>
-        <!--/. Side navigation links -->
-      </links>
-      <div class="sidenav-bg mask-strong"></div>
-    </mdb-side-nav>
-    <!--/. Sidebar navigation -->
-  
-    <!-- Navbar -->
-    <mdb-navbar SideClass="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav"
-                [containerInside]="false">
-  
-      <navlinks class="navbar-container">
-        <!-- SideNav slide-out button -->
-        <div class="float-left">
-          <a (click)="sidenav.show()" class="button-collapse hidden-nav-button-collapse">
-            <i class="fas fa-bars"></i>
-          </a>
-        </div>
-        <!--/. SideNav slide-out button -->
-      </navlinks>
-  
-      <mdb-navbar-brand>
-        <!-- Breadcrumb-->
-        <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-          <p class="brand-nav">Coris</p>
-        </div>
-        <!--/. Breadcrumb-->
-      </mdb-navbar-brand>
-  
-      <navlinks>
-        <ul class="nav navbar-nav nav-flex-icons ml-auto ie-double-nav ie-hidden-double-nav">
-          <li class="nav-item">
-            <a class="nav-link waves-light" mdbWavesEffect>
-              <i class="fas fa-envelope"></i>
-              <span class="clearfix d-none d-sm-inline-block">Validator</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-light" mdbWavesEffect>
-              <i class="far fa-comments"></i>
-              <span class="clearfix d-none d-sm-inline-block">Block</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-light" mdbWavesEffect>
-              <i class="fas fa-user"></i>
-              <span class="clearfix d-none d-sm-inline-block">Transaction</span>
-            </a>
-          </li>
-          <li class="nav-item dropdown btn-group" dropdown>
-            <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-              Network
-            </a>
-            <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
-              <a class="dropdown-item" href="#">MainNet</a>
-              <a class="dropdown-item" href="#">Testnet</a>
-              <a class="dropdown-item" href="#">Something else</a>
-            </div>
-          </li>
-        </ul>
-      </navlinks>
-    </mdb-navbar>
-    <!--/. Navbar -->
-  
-  </header>
-  <!--/.Double navigation-->
-  
-  <!--Main Layout-->
-  <main>
-  
-  </main>
-  <!--/Main layout-->
+<div class="chip">
+    test
+</div>
