--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -147,7 +147,7 @@
         <mdb-navbar-brand>
           <!-- Breadcrumb-->
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
-            <h1 class="brand-nav">Coris</h1>
+            <a href="#"><h1 class="brand-nav">Coris</h1></a>
           </div>
           <!--/. Breadcrumb-->
         </mdb-navbar-brand>
@@ -157,33 +157,33 @@
             <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect routerLink="/validators" routerLinkActive="active-list-item">
                 <i class="fa fa-users"></i>
-                <span class="clearfix d-none d-sm-inline-block">Validator</span>
+                <h3 class="clearfix d-none d-sm-inline-block">Validator</h3>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect routerLink="/blocks" routerLinkActive="active-list-item">
                 <i class="fa fa-cubes"></i>
-                <span class="clearfix d-none d-sm-inline-block">Blocks</span>
+                <h3 class="clearfix d-none d-sm-inline-block">Blocks</h3>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect routerLink="/txs" routerLinkActive="active-list-item">
                 <i class="fa fa-tasks"></i>
-                <span class="clearfix d-none d-sm-inline-block">Transactions</span>
+                <h3 class="clearfix d-none d-sm-inline-block">Transactions</h3>
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link waves-light" mdbWavesEffect routerLink="/gov" routerLinkActive="active-list-item">
                 <i class="fa fa-university"></i>
-                <span class="clearfix d-none d-sm-inline-block">Governance</span>
+                <h3 class="clearfix d-none d-sm-inline-block">Governance</h3>
               </a>
             </li>
 
             <li class="nav-item dropdown btn-group" dropdown>
               <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                 <i class="fa fa-globe"></i>
-                <span class="clearfix d-none d-sm-inline-block">Network</span>
+                <h3 class="clearfix d-none d-sm-inline-block">Network</h3>
               </a>
               <div class="dropdown-menu dropdown-primary dropdown-menu-right" role="menu">
                 <a class="dropdown-item" href="#">MainNet</a>
@@ -201,9 +201,11 @@
     <main>
         <body>
             <app-status-bar></app-status-bar>
+            <!-- <app-test></app-test> -->
             <router-outlet></router-outlet>
             <app-scroll-top></app-scroll-top>
             <app-footer></app-footer>
+            
         </body>
     </main>
     <!--/Main layout-->
