--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -34,7 +34,7 @@
       <th mat-sort-header="name" mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let validator" id="{{validator.hex_address}}"> 
         <span>
-          <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
+          <!-- <figure style="cursor: pointer;" (click)="openDialog(validator)" class="validator-avatar is-128x128" *ngIf="validator.keybase">
             <img  
               *ngIf="!validator.picture; else elseBlock" 
               src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
@@ -43,7 +43,13 @@
               <img src="{{validator.picture}}" alt="avatar">
             </ng-template>
             {{validator.description.moniker}}
-          </figure>
+          </figure> -->
+          <div class="chip validator-avatar is-128x128" style="cursor: pointer;" (click)="openDialog(validator)" *ngIf="validator.keybase">
+              <img  
+              *ngIf="!validator.picture; else elseBlock" 
+              src="https://ui-avatars.com/api/?size=50&name={{validator.description.moniker}}" 
+              alt="avatar"> {{validator.description.moniker | slice:0:12 }}
+            </div>
         </span>
         <!-- <span class="moniker">{{validator.description.moniker}}</span> -->
       </td>
