--- a/src/styles.scss
+++ b/src/styles.scss
@@ -337,7 +337,7 @@ footer p {
 /* Material */
 /*-------------------------------------------------*/
 .query-card {
-  background: #00796B;
+  background: #3F51B5;
   color: white;
 }
 
