WiP: Status component: added community pool; grid added

--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -7,6 +7,10 @@
     font-size: 150%;
 }
 
+.query-card-wrapper {
+    padding: 20px;
+}
+
 // @media screen and (max-width: 768px) {
 //     .row {
 //         max-width: 95%; /*1140px or in %*/
