--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -17,9 +17,9 @@
       </h2>
     </div>
   </div>
-  <div @fadeInAnimation class="row-queries">
+  <div @fadeInAnimation class="row-queries container">
     <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
           <mat-card class="query-card" matTooltip="Latest Block Height" matTooltipPosition="above">
             <mat-card-header>
@@ -37,7 +37,7 @@
           </mat-card>                  
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" matTooltip="Consensus State" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -49,7 +49,7 @@
           </mat-card-content>
         </mat-card>                  
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" matTooltip="Total Active Validators" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -61,29 +61,29 @@
           </mat-card-content>
         </mat-card>    
       </div>
-      <div class="col span-1-of-4">
-          <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
-            <mat-card-header>
-              <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-                <i class="ion-soup-can"></i>&nbsp;Bonded
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
-                  {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
-                  ({{
-                    (appState | async).stakePool.bonded_tokens/1e6
-                    /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
-                    | percent: '.2-2'
-                  }})
-                  <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
-                </h3>
-            </mat-card-content>
-          </mat-card>                  
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
+        <mat-card class="query-card" matTooltip="Total Bonded Stake" matTooltipPosition="above">
+          <mat-card-header>
+            <mat-card-title class="subtitle box-key" style="margin-left:-11px">
+              <i class="ion-soup-can"></i>&nbsp;Bonded
+            </mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+              <h3 class="title box-value" style="overflow: hidden; white-space: nowrap;">
+                {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}}
+                ({{
+                  (appState | async).stakePool.bonded_tokens/1e6
+                  /((appState | async).stakePool.bonded_tokens/1e6 + (appState | async).stakePool.not_bonded_tokens/1e6) 
+                  | percent: '.2-2'
+                }})
+                <!-- {{ (appState | async).stakePool.bonded_tokens/1e6 | number:'.0-0'}} -->
+              </h3>
+          </mat-card-content>
+        </mat-card>                  
       </div>
     </div>
     <div class="row" *ngIf="(appState | async).blocks.length; else elseBlock">
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <div style="cursor: pointer;" routerLink="/last-block" class="is-parent">
           <mat-card class="query-card" matTooltip="Block Interval" matTooltipPosition="above">
             <mat-card-header>
@@ -99,19 +99,21 @@
           </mat-card>                  
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" matTooltip="Global Average Commission Rate" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
-              <i class="ion-cash"></i>&nbsp;Commission
+              <i class="ion-cash"></i>&nbsp;Community Pool
             </mat-card-title>
           </mat-card-header>
           <mat-card-content>
-            <h3 class="title chain-queries-title box-value">Add commission</h3>
+            <h3 class="title chain-queries-title box-value">
+              {{ (appState | async).stakePool.community_pool?.amount/1e6 | number:'.0-0'}}
+            </h3>
           </mat-card-content>
         </mat-card>                  
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" matTooltip="Inflation Rate" matTooltipPosition="above">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -123,7 +125,7 @@
           </mat-card-content>
         </mat-card>    
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
           <mat-card class="query-card" matTooltip="ATOM USD Price" matTooltipPosition="above">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
