revamped expanded row in validator table. Many other tweaks.

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -148,7 +148,13 @@
           <!-- Breadcrumb-->
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
             <a href="#"><h1 class="brand-nav">Coris</h1></a>
+            <mat-chip-list class="alpha-chip">
+                <mat-chip color = "accent" selected>
+                  alpha
+                </mat-chip>
+            </mat-chip-list>
           </div>
+          
           <!--/. Breadcrumb-->
         </mdb-navbar-brand>
     
