--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -12,3 +12,10 @@
 //         max-width: 95%; /*1140px or in %*/
 //     }
 // }
+
+.mdbTooltip {
+    height: 35px !important;
+    background-color: red !important;
+    color: white !important;
+    border-radius: 5px;
+}
