--- a/src/app/components/validators/validators.component.scss
+++ b/src/app/components/validators/validators.component.scss
@@ -143,8 +143,8 @@ tbody {
 
 .bond-status {
   display: flex;
-  justify-content: left;
   padding: 10px;
+  margin-left: 0;
 }
 
 .dropdown-toggle {
@@ -209,3 +209,39 @@ tr.validator-detail-row {
   background-color: #3F51B5;
   color: white;
 }
+
+.paginator {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: right;
+  margin-right: 0;
+ }
+
+ .mat-paginator {
+  color:white;
+  background-color: #3F51B5;
+ }
+
+ .list-group-item {
+  background-color: #0D151F;
+  color: white;
+ }
+
+ .badge {
+  margin-left: 10px;
+ }
+
+ .badge i {
+   margin: 0;
+ }
+
+ .badge-ticker {
+   font-size: 80%;
+ }
+
+ .list-group a:hover,
+ .list-group a:active {
+     color: white;
+     /* border-bottom: 1px solid transparent; */
+ }
