--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -37,7 +37,7 @@
           </mat-card>                  
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" mdbTooltip="Consensus State" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -49,7 +49,7 @@
           </mat-card-content>
         </mat-card>                  
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" mdbTooltip="Total Active Validators" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -61,7 +61,7 @@
           </mat-card-content>
         </mat-card>    
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
           <mat-card class="query-card" mdbTooltip="Total Bonded Stake" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -99,7 +99,7 @@
           </mat-card>                  
         </div>
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" mdbTooltip="Global Average Commission Rate" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -113,7 +113,7 @@
           </mat-card-content>
         </mat-card>                  
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
         <mat-card class="query-card" mdbTooltip="Inflation Rate" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
@@ -125,7 +125,7 @@
           </mat-card-content>
         </mat-card>    
       </div>
-      <div class="col span-1-of-4">
+      <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
           <mat-card class="query-card" mdbTooltip="ATOM USD Price" placement="top">
             <mat-card-header>
               <mat-card-title class="subtitle box-key" style="margin-left:-11px">
