--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -178,11 +178,11 @@
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Rewards
-                <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">add</span>
+                <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">{{validator.rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Outstanding Rewards
-                <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">{{validator.rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
+                <span class="badge badge-primary badge-pill" *ngIf="validator.outstanding_rewards">{{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;">
                 <a href="{{validator.description?.website}}" target=" ">Website<span class="badge badge-primary badge-pill"><i class="fa fa-globe"></i></span></a>
