fixes and addons

--- a/src/app/components/status-bar/status-bar.component.html
+++ b/src/app/components/status-bar/status-bar.component.html
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="col-12 col-lg-3 col-md-6 w-25 query-card-wrapper">
-        <mat-card class="query-card" mdbTooltip="Global Average Commission Rate" placement="top">
+        <mat-card class="query-card" mdbTooltip="Community Pool Stake" placement="top">
           <mat-card-header>
             <mat-card-title class="subtitle box-key" style="margin-left:-11px">
               <i class="ion-cash"></i>&nbsp;Community Pool
