--- a/src/app/components/validators/validators.component.html
+++ b/src/app/components/validators/validators.component.html
@@ -169,6 +169,10 @@
             <p class="overflowed-text">Details: {{validator.description?.details}}</p>  -->
             <ul class="list-group list-group-horizontal-lg">
               <li class="list-group-item d-flex justify-content-between align-items-center">
+                First seen
+                <span class="badge badge-primary badge-pill">add</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                 Precommits
                 <span class="badge badge-primary badge-pill" *ngIf="validator.slashing">
                   <span *ngIf="!validator.jailed; else elseCommitsBlock">
@@ -190,20 +194,24 @@
                 </span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
+                Missed Blocks
+                <span class="badge badge-primary badge-pill">add</span>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-center">
                 Self-bond%
                 <span class="badge badge-primary badge-pill">{{ validator.self_bond / validator.tokens | percent:'.2-2' }}</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-                Rewards
+                Outstanding Rewards
                 <span class="badge badge-primary badge-pill" *ngIf="validator.rewards">{{validator.rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center">
-                Outstanding Rewards
+                Rewards
                 <span class="badge badge-primary badge-pill" *ngIf="validator.outstanding_rewards">{{validator.outstanding_rewards[0].amount/1e6 | number:'.2-2'}} <span class="badge-ticker">ATOM</span></span>
               </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;">
+              <!-- <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;">
                 <a href="{{validator.description?.website}}" target=" ">Website<span class="badge badge-primary badge-pill"><i class="fa fa-globe"></i></span></a>
-              </li>
+              </li> -->
               <li class="list-group-item d-flex justify-content-between align-items-center" style="cursor: pointer;" (click)="openDialog(validator)">
                 Details
                 <span class="badge badge-primary badge-pill"><i class="fa fa-ellipsis-v"></i></span>
