added two new validator profile components under /components/validator-profile

--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -149,7 +149,7 @@
           <div class="breadcrumbs breadcrumbs-hidden-nav breadcrumb-dn mr-auto">
             <a href="#"><h1 class="brand-nav">Coris</h1></a>
             <mat-chip-list class="alpha-chip">
-                <mat-chip color = "accent" selected>
+                <mat-chip color = "accent">
                   alpha
                 </mat-chip>
             </mat-chip-list>
